--- a/backend/wp-content/themes/rschip/src/pug/templates/template.pug
+++ b/backend/wp-content/themes/rschip/src/pug/templates/template.pug
@@ -70,10 +70,14 @@ html(lang="en" data-scroll='0')
             script(src="libs/js/modal.js")
           
         block script
+            script(src="js/api.js")
+            script(src="js/data-brands.js")
+
             script(src="js/menu/menu.component.js")
             script(src="js/chat/chat.component.js")
             script(src="js/debuggrid/debuggrid.component.js")
             script(src="js/main.js")
+            
 
             script(src="js/faq/faq.component.js")
             script(src="js/modals/modalGallary.component.js")
@@ -82,4 +86,5 @@ html(lang="en" data-scroll='0')
             script(src="js/productSlider/productSlider.component.js")
             script(src="js/cartProducts/cartProducts.component.js")
             script(src="js/performance/performance.component.js")
+            script(src="js/products/productsCart.component.js")
             
